# kokkos-utils

./: CMakeLists.txt
docs/: CMakeLists.txt  tests.dox
include/kokkos-utils/impl/: type_list.hpp
tests/: CMakeLists.txt
tests/concepts/: test_View.cpp
tests/impl/: test_type_list.cpp
